// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AttributeTreeRepo getValueByID Should return value 1`] = `
"
                FOR linkedRecord, edge
                    IN 1 OUTBOUND @value0
                    @@value1
                    FILTER edge._key == @value2
                    FILTER edge.attribute == @value3
                    LIMIT 1
                    RETURN {linkedRecord, edge}
            "
`;

exports[`AttributeTreeRepo getValueByID Should return value 2`] = `
Object {
  "@value1": "core_edge_values_links",
  "value0": "test_lib/987654",
  "value2": 112233,
  "value3": "test_tree_attr",
}
`;

exports[`AttributeTreeRepo getValues Should return all values if forced 1`] = `
"
                FOR linkedRecord, edge
                IN 1 OUTBOUND @value0
                @@value1
                FILTER edge.attribute == @value2
                
                RETURN {linkedRecord, edge}
            "
`;

exports[`AttributeTreeRepo getValues Should return linked tree element 1`] = `
"
                FOR linkedRecord, edge
                IN 1 OUTBOUND @value0
                @@value1
                FILTER edge.attribute == @value2
                
                RETURN {linkedRecord, edge}
            "
`;

exports[`AttributeTreeRepo getValues Should return linked tree element 2`] = `
Object {
  "@value1": "core_edge_values_links",
  "value0": "test_lib/123456",
  "value2": "test_tree_attr",
}
`;
